--- a/ansible/kitty.yml
+++ b/ansible/kitty.yml
@@ -3,7 +3,19 @@
 - name: Install latest upstream kitty release
   hosts: localhost
   tasks:
-    - name: Run software/kitty.yml
-      ansible.builtin.import_role:
-        name: software
-        tasks_from: kitty.yml
+    - name: Get latest upstream kitty release
+      ansible.builtin.uri:
+        url: https://api.github.com/repos/kovidgoyal/kitty/releases/latest
+        method: GET
+      register: kitty_release
+
+    - name: Install latest upstream kitty release
+      become: true
+      vars:
+        version: "{{ kitty_release.json.tag_name | trim('v') }}"
+        filename: "kitty-{{ version }}-{{ ansible_facts['architecture'] }}.txz"
+        asset: "{{ kitty_release.json.assets | selectattr('name', 'eq', filename) | first }}"
+      ansible.builtin.unarchive:
+        src: "{{ asset.browser_download_url }}"
+        remote_src: true
+        dest: "{{ local_prefix }}"
