feat(shell): replace old, vendored LS_COLORS with vivid
I forgot entirely that I vendored my LS_COLORS and subsequently
haven't pulled an updated version in *years*. At any rate, I decided to
replace it with `vivid` since the coloring is simpler and supports
themes.

--- a/ansible/roles/shell/tasks/main.yml
+++ b/ansible/roles/shell/tasks/main.yml
@@ -90,3 +90,22 @@
   tags:
     - delta
     - git
+
+- name: Install cargo
+  become: true
+  ansible.builtin.package:
+    name: cargo
+    state: present
+  tags:
+    - install
+    - rust
+
+- name: Install Rust-based utilities
+  community.general.cargo:
+    name:
+      - vivid
+    state: present
+    path: "{{ local_prefix }}"
+  tags:
+    - install
+    - rust
