fix(ansible): missing `become` for package task

--- a/ansible/roles/nvim/tasks/plugins.yml
+++ b/ansible/roles/nvim/tasks/plugins.yml
@@ -30,6 +30,7 @@
     creates: "{{ (nvim_state, 'lazy') | path_join }}"
 
 - name: Install Treesitter CLI
+  become: true
   ansible.builtin.package:
     name: "{{ nvim_treesitter_pkgs }}"
     state: present
