fix(ansible): not linking .zshenv to home dir
Small oversight with the new dotfiles linking strategy.

--- a/ansible/roles/shell/tasks/zsh.yml
+++ b/ansible/roles/shell/tasks/zsh.yml
@@ -21,6 +21,12 @@
     - "{{ (opt_dir, 'zcomet') | path_join }}"
   tags: home
 
+- name: Link .zshenv into home directory
+  ansible.builtin.file:
+    src: "{{ (zsh.config_dir, '.zshenv') | path_join }}"
+    dest: "{{ (ansible_facts.env.HOME, '.zshenv') | path_join }}"
+    state: link
+
 - name: Remove unwanted openSuse /etc/zshrc edits
   when: ansible_facts["distribution"] == "openSUSE Tumbleweed"
   become: true
